--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
+
+  <!---Demo on github webhooks-->
   <url>https://maven.apache.org</url>
   <dependencies>
     <dependency>
